--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-# Add your Python dependencies here
-# Example:
-# numpy==1.24.0
-# pandas==2.0.0
+# Database connectivity
+# mariadb==1.1.10  # Requires C libraries - use if performance is critical
+# Alternative: PyMySQL (pure Python implementation, easier to install)
+pymysql==1.1.0
+
+# Data handling (using latest version for Python 3.13 compatibility)
+pandas>=2.2.0
+
+# Environment variables (for secure credential management)
+python-dotenv==1.0.0
